--- a/builder.yaml
+++ b/builder.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: kubectl
-    image: joshendriks/alpine-k8s
+    image: alpine/k8s:1.28.15
     command:
     - /bin/cat
     tty: true    
